--- a/inventory/example.yml
+++ b/inventory/example.yml
@@ -16,6 +16,10 @@ all:
         vmtwo.local:
     docker:
       hosts:
+        FedoraD:
+          ansible_host: 127.0.0.1
+          ansible_port: 2221
+          ansible_user: root
         ubuntuD:
           ansible_host: 127.0.0.1
           ansible_port: 2222
