--- a/playbooks/roles/ntp-role/defaults/main.yml
+++ b/playbooks/roles/ntp-role/defaults/main.yml
@@ -14,11 +14,10 @@ ntp_file_generation_sets:
   - 'filegen peerstats file peerstats type day enable'
   - 'filegen clockstats file clockstats type day enable'
 ntp_servers:
-  - '0.ubuntu.pool.ntp.org'
-  - '1.ubuntu.pool.ntp.org'
-  - '2.ubuntu.pool.ntp.org'
-  - '3.ubuntu.pool.ntp.org'
-  - 'ntp.ubuntu.com'
+  - '0.pool.ntp.org'
+  - '1.pool.ntp.org'
+  - '2.pool.ntp.org'
+  - '3.pool.ntp.org'
 ntp_restrictions:
   - 'restrict -4 default kod notrap nomodify nopeer noquery'
   - 'restrict -6 default kod notrap nomodify nopeer noquery'
