--- a/playbooks/roles/ntp-role/tasks/configure.yml
+++ b/playbooks/roles/ntp-role/tasks/configure.yml
@@ -10,7 +10,7 @@
     owner: 'root'
     group: 'root'
     mode: '0644'
-  notify: 'restart ntp'
+  notify: 'NTP | Service restart'
 
 - name: 'NTP | Configure NTP conf file.'
   become: yes
@@ -20,4 +20,4 @@
     owner: 'root'
     group: 'root'
     mode: '0644'
-  notify: 'restart ntp'
+  notify: 'NTP | Service restart'
