--- a/playbooks/roles/ntp-role/tasks/main.yml
+++ b/playbooks/roles/ntp-role/tasks/main.yml
@@ -1,8 +1,7 @@
-
 ---
-
+# Main tasks file
 - name: 'NTP | Include OS-specific variables.'
-  include_vars: '{{ ansible_distribuition }}.yml'
+  include_vars: '{{ ansible_os_family }}.yml'
 
 - name: 'NTP | Define service name'
   set_fact:
