--- a/playbooks/roles/rkhunter-role/vars/Suse.yml
+++ b/playbooks/roles/rkhunter-role/vars/Suse.yml
@@ -1,8 +1,4 @@
 ---
 # vars file for playbooks/roles/rkhunter-role
-apache_default_packages:
-  - { name: apache2, state: present }
-
-apache_default_service_name: 'apache2'
-
-apache_default_user: 'wwwrun'
+rkhunter_default_packages:
+  - { name: rkhunter, state: present }
